api_versioned_docs/version-12.1.4/avalonia/controls/primitives/popuppositioning/custompopupplacement.mdx
---
title: 'CustomPopupPlacement'
hide_title: true
slug: '/avalonia/controls/primitives/popuppositioning/custompopupplacement'
uid: 'Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacement'
commentId: 'T:Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacement'
docset: 'avalonia-docs'
packageId: 'Avalonia'
assembly: 'Avalonia.Controls'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls.Primitives.PopupPositioning'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">CustomPopupPlacement Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls.Primitives.PopupPositioning</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia</code>
</div>
</div>

<div className="apiref-page__lead">

Defines custom placement parameters for a [Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacementCallback](xref:Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacementCallback) callback.

</div>

<div className="apiref-page__signature">

```csharp
public class CustomPopupPlacement
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> object <span className="apiref-page__relation-separator">-&gt;</span> CustomPopupPlacement
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Implements:</span> IEquatable&lt;CustomPopupPlacement&gt;
</div>
</div>

## Methods

| Name | Description |
| --- | --- |
| [&lt;Clone&gt;$](#uid-771ff66975) | No summary available. |
| [Equals (2 overloads)](#uid-fc1a0dd742) | No summary available. |
| [GetHashCode](#uid-542155a8e9) | No summary available. |
| [ToString](#uid-9f0e6eefa1) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-771ff66975"></span>

### &lt;Clone&gt;$ Method

```csharp
public Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacement <Clone>$()
```

#### Returns

[Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacement](xref:Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacement)


</section>

<span id="uid-fc1a0dd742"></span>

### Equals overloads

<section className="apiref-page__member-entry">

<span id="uid-eefbc0c70b"></span>

#### Equals Method

```csharp
public bool Equals(Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacement other)
```

##### Parameters

`other` [Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacement](xref:Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacement)


##### Returns

bool


</section>

<section className="apiref-page__member-entry">

<span id="uid-e843ff608c"></span>

#### Equals Method

```csharp
public bool Equals(object obj)
```

##### Parameters

`obj` object


##### Returns

bool


</section>

<section className="apiref-page__member-entry">

<span id="uid-542155a8e9"></span>

### GetHashCode Method

```csharp
public int GetHashCode()
```

#### Returns

int


</section>

<section className="apiref-page__member-entry">

<span id="uid-9f0e6eefa1"></span>

### ToString Method

```csharp
public string ToString()
```

#### Returns

string


</section>

## Properties

| Name | Description |
| --- | --- |
| [Anchor](#uid-88afa1c433) | No summary available. |
| [AnchorRectangle](#uid-d36fed8a6d) | No summary available. |
| [ConstraintAdjustment](#uid-6becb1f5c7) | No summary available. |
| [Deflate](#uid-6764c20bc0) | Gets or sets how far to deflate [Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacement.PopupSize](xref:Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacement.PopupSize) when positioning the popup. |
| [Gravity](#uid-e1e90d2157) | No summary available. |
| [Offset](#uid-a560f25d92) | No summary available. |
| [PopupSize](#uid-7fb1531572) | The [Avalonia.Size](xref:Avalonia.Size) of the [Avalonia.Controls.Primitives.Popup](xref:Avalonia.Controls.Primitives.Popup) control. |
| [Target](#uid-6250597a25) | Placement target of the popup. |

<section className="apiref-page__member-entry">

<span id="uid-88afa1c433"></span>

### Anchor Property

```csharp
public Avalonia.Controls.Primitives.PopupPositioning.PopupAnchor Anchor { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-d36fed8a6d"></span>

### AnchorRectangle Property

```csharp
public Avalonia.Rect AnchorRectangle { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-6becb1f5c7"></span>

### ConstraintAdjustment Property

```csharp
public Avalonia.Controls.Primitives.PopupPositioning.PopupPositionerConstraintAdjustment ConstraintAdjustment { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-6764c20bc0"></span>

### Deflate Property

Gets or sets how far to deflate [Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacement.PopupSize](xref:Avalonia.Controls.Primitives.PopupPositioning.CustomPopupPlacement.PopupSize) when positioning the popup.

```csharp
public Avalonia.Thickness Deflate { get; set; }
```

#### Remarks

This is normally set to the margin of the popup's child. This allows out-of-bounds effects
like drop shadows to be drawn without affecting the final position of the child.

</section>

<section className="apiref-page__member-entry">

<span id="uid-e1e90d2157"></span>

### Gravity Property

```csharp
public Avalonia.Controls.Primitives.PopupPositioning.PopupGravity Gravity { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-a560f25d92"></span>

### Offset Property

```csharp
public Avalonia.Point Offset { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-7fb1531572"></span>

### PopupSize Property

The [Avalonia.Size](xref:Avalonia.Size) of the [Avalonia.Controls.Primitives.Popup](xref:Avalonia.Controls.Primitives.Popup) control.

```csharp
public Avalonia.Size PopupSize { get; set; }
```

</section>

<section className="apiref-page__member-entry">

<span id="uid-6250597a25"></span>

### Target Property

Placement target of the popup.

```csharp
public Avalonia.Visual Target { get; set; }
```

</section>

</ApiRefPage>

